// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<ConfirmModal
  confirmButtonText="delete"
  confirmData="1"
  header="settings.almintegration.delete.header"
  isDestructive={true}
  onClose={[MockFunction]}
  onConfirm={[MockFunction]}
>
  <p
    className="spacer-bottom"
  >
    <FormattedMessage
      defaultMessage="settings.almintegration.delete.message"
      id="settings.almintegration.delete.message"
      values={
        {
          "id": <b>
            1
          </b>,
        }
      }
    />
  </p>
  <p>
    settings.almintegration.delete.info.4
     
  </p>
</ConfirmModal>
`;

exports[`should render correctly 2`] = `
<ConfirmModal
  confirmButtonText="delete"
  confirmData="1"
  header="settings.almintegration.delete.header"
  isDestructive={true}
  onClose={[MockFunction]}
  onConfirm={[MockFunction]}
>
  <p
    className="spacer-bottom"
  >
    <FormattedMessage
      defaultMessage="settings.almintegration.delete.message"
      id="settings.almintegration.delete.message"
      values={
        {
          "id": <b>
            1
          </b>,
        }
      }
    />
  </p>
  <p>
    settings.almintegration.delete.no_info
  </p>
</ConfirmModal>
`;
